--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -2,10 +2,11 @@
   border:1px solid black;
   background-color:yellow;
   width:1000px;
-  height:500px;
+  height:1000px;
   position:relative;
   left:155px;
   top:157px;
+  margin-bottom:5em;
 }
 
 h2{
