--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,12 +1,13 @@
-#blog{
+#content{
   border:1px solid black;
   background-color:yellow;
-  width:1000px;
+  width:1100px;
   height:1000px;
   position:relative;
-  left:155px;
+  left:153px;
   top:157px;
   margin-bottom:5em;
+  padding:8px;
 }
 
 h2{
