--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,5 +1,5 @@
 body{
-  background-color:gray;
+  background-color:white;
   font-family: Garamond, 'Times New Roman', serif;
 }
 
@@ -66,7 +66,7 @@ nav>section{
 
 footer{
   position:fixed;
-  width:99%;
+  width:1203px;
   height:4em;
   border:2px solid black;
   bottom:-2px;
