--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -10,18 +10,19 @@ body{
   border:2px solid black;
   background-color:blue;
   margin:0px;
+  top:0px;
 }
 
 img{
-  max-height:100%;
-  max-width:100%;
+  max-height:99%;
+  max-width:99%;
 }
 
 header{
   background-color:gray;
   position:fixed;
   left:160px;
-  top:8px;
+  top:0px;
   margin:0px;
   /*padding:10px;*/
   height:146px;
@@ -45,8 +46,8 @@ h1{
 .header-link-imgs{
   /*border:2px solid black;*/
   display: inline-block;
-  height:2em;
-  width:2em;
+  height:25px;
+  width:25px;
   margin:auto 60px;
 }
 
