--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -2,12 +2,12 @@
   border:1px solid black;
   background-color:yellow;
   width:1100px;
-  height:2000px;
+  height:auto;
   position:relative;
   left:153px;
   top:157px;
   margin-bottom:5em;
-  padding:8px;
+  padding:8px 8px 40px 8px;
   font-size:1.05em;
 }
 
