--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,4 +1,4 @@
-#content{
+.content{
   border:1px solid black;
   background-color:yellow;
   width:1100px;
@@ -28,7 +28,7 @@ div>p{
   left:20px;
 }
 
-#blog-index{
+.blog-index{
   border:1px solid black;
   background-color:white;
   width:1000px;
