--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,9 +1,9 @@
 body{
-  background-color:white;
+  background-color: #dddddd ; 
   font-family: Garamond, 'Times New Roman', serif;
 }
 
-#profile{
+.profile{
   position:fixed;
   height:146px;
   width:146px;
@@ -36,11 +36,11 @@ h1{
   /*border:2px solid black;*/
 }
 
-#header-links{
+.header-links{
   /*border:2px solid black;*/
   margin:0px auto;
-  width:50%;
-  height:48px;
+  width:300px;
+  height:auto;
 }
 
 .header-link-imgs{
@@ -53,11 +53,13 @@ h1{
 
 nav{
   position:fixed;
+  font-weight:400;
   top:160px;
   border:2px solid black;
-  width:146px;
+  width:135px;
   /*padding:5px;*/
   margin:5px 0px;
+  padding:4px;
 }
 
 nav>section{
@@ -81,8 +83,8 @@ footer>section{
   /*border:2px solid black;*/
   /*margin:0 auto;*/
   font-size:0.75em;
-  width:200px;
-  height:1.5em;
+  width:250px;
+  height:auto;
   margin:0px 87px;
 }
 
